<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center" 
    android:gravity="center"
    
    
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty"
        android:src="@drawable/no_users" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="left|center"
        android:padding="8.0dip"
        android:text="@string/organizer_Forfaits_empty"
        android:textColor="#ff5a5a5a"
        android:textSize="14.0sp"  />

    <Button
        android:id="@+id/NoEmptyAddForfait"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_marginBottom="16.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="24.0dip"
        android:background="@drawable/btn_green_states"
        android:focusable="true"
        android:onClick="showAddForfaitForms"
        android:text="@string/organizer_Forfaits_create"
        android:textAllCaps="true"
        android:textColor="#ffffffff"
        android:textSize="14.0sp" />

</LinearLayout>