<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/grayBack"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:layout_weight="0.93"
        android:scaleType="center"
        android:src="@drawable/no_users" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/oops_error"
        android:textSize="25.0sp" />

    <TextView
        android:id="@+id/textview_search_result_list_activity_error_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/error_inet_error"
        android:textColor="#ff808080"
        android:textSize="20.0sp" />

    <Button
        android:id="@+id/button_search_result_list_activity_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/btn_finish_rd"
        android:includeFontPadding="false"
        android:paddingBottom="7.0dip"
        android:paddingTop="7.0dip"
        android:text="@string/Annuler"
        android:textSize="20.0sp" />

</LinearLayout>