<?xml version="1.0" encoding="utf-8"?>
<com.lpii.evma.view.VerticalScrollview xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:floatlabel="http://schemas.android.com/apk/res-auto"
    style="@style/Form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffe8e8e8" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/ct_white"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium" >

            <com.lpii.evma.view.FloatLabelEditText
                android:id="@+id/first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_first_name"
                android:imeOptions="actionNext"
                android:textSize="@dimen/font_size_medium"
                floatlabel:fitScreenWidth="full"
                floatlabel:hint="@string/sign_up_first_name"
                floatlabel:inputType="textPersonName"
                floatlabel:textColorHintFocused="@color/ev_green_w"
                floatlabel:textColorHintUnFocused="@color/ct_dark_gray_20p" />

            <com.lpii.evma.view.FloatLabelEditText
                android:id="@+id/last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_last_name"
                android:imeOptions="actionNext"
                android:textSize="@dimen/font_size_medium"
                floatlabel:fitScreenWidth="full"
                floatlabel:hint="@string/sign_up_last_name"
                floatlabel:inputType="textPersonName"
                floatlabel:textColorHintFocused="@color/ev_green_w"
                floatlabel:textColorHintUnFocused="@color/ct_dark_gray_20p" />

            <com.lpii.evma.view.FloatLabelEditText
                android:id="@+id/signUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_first_name"
                floatlabel:fitScreenWidth="full"
                floatlabel:hint="@string/sign_up_user_name"
                floatlabel:textColorHintFocused="@color/ev_green_w"
                floatlabel:textColorHintUnFocused="@color/ct_dark_gray_20p" >
            </com.lpii.evma.view.FloatLabelEditText>

            <com.lpii.evma.view.FloatLabelEditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_email"
                android:textSize="@dimen/font_size_medium"
                floatlabel:fitScreenWidth="full"
                floatlabel:hint="@string/sign_up_email_hint"
                floatlabel:inputType="textEmailAddress"
                floatlabel:textColorHintFocused="@color/ev_green_w"
                floatlabel:textColorHintUnFocused="@color/ct_dark_gray_20p" />

            <com.lpii.evma.view.FloatLabelEditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_password"
                android:textSize="@dimen/font_size_medium"
                floatlabel:fitScreenWidth="full"
                floatlabel:hint="@string/sign_up_password"
                floatlabel:inputType="textPassword"
                floatlabel:textColorHintFocused="@color/ev_green_w"
                floatlabel:textColorHintUnFocused="@color/ct_dark_gray_20p" />
            
              <CheckBox
                    android:id="@+id/isOrga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Organisateur" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/btn_login_states"
            android:paddingLeft="57.0dip"
            android:textAllCaps="true"
            android:textColor="#ffffffff"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="0.0dip"
                android:layout_height="@dimen/divider_medium"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_weight="1.0"
                android:background="@color/ct_dark_gray_20p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:textColor="@color/ct_dark_gray_20p" />

            <View
                android:layout_width="0.0dip"
                android:layout_height="@dimen/divider_medium"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_weight="1.0"
                android:background="@color/ct_dark_gray_20p" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_facebook"
            style="@style/CustomTheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/chk_facebook"
            android:textSize="@dimen/font_size_medium" />
    </LinearLayout>

</com.lpii.evma.view.VerticalScrollview>