<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffe8e8e8" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ffe8e8e8"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/connectLbl"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:gravity="center"
            android:paddingTop="12.0dip"
            android:text="@string/login_select_a_service"
            android:textColor="#ff555555"
            android:textSize="14.0sp"
            />

        <LinearLayout
            android:id="@+id/btnsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

           <ImageView
               android:id="@+id/imageView1"
               android:layout_width="match_parent"
               
               android:layout_height="150dp"
               android:layout_marginTop="15dp"
               android:contentDescription="@string/login"
               android:src="@drawable/ic_launcherxx" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >
            </LinearLayout>

            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fieldsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_emailTxt"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_marginBottom="8.0dip"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@drawable/login_bg"
                android:gravity="center_vertical"
                android:hint="@string/login_label_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16.0dip"
                android:textColor="#ff5e5e5e"
                android:textSize="14.0sp"
                 />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="8.0dip"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:layout_marginTop="0.0dip"
                android:background="@drawable/pwd_bg"
                android:gravity="center_vertical"
                android:hint="@string/login_label_pwd"
                android:inputType="textPassword"
                android:paddingLeft="16.0dip"
                android:textColor="#ff5e5e5e"
                android:textSize="14.0sp"
                 />

            <TextView
                android:id="@+id/loginFaillureTV"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:gravity="center"
                android:paddingTop="12.0dip"
                android:text="@string/login_faillure"
                android:textColor="#fffb7174"
                android:textSize="14.0sp"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/btnLoginCheck"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@drawable/btn_login_states"
                android:onClick="startSimpleAuth"
                android:text="@string/empty"
                android:textColor="#ffffffff" />

           <!--  <Button
                android:id="@+id/lostPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="32.0dip"
                android:layout_gravity="right"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:layout_marginTop="4.0dip"
                android:background="@android:color/transparent"
                android:text="@string/login_forgot_password"
                android:textColor="#ff454545"
                android:textSize="14.0sp"
                /> -->
        </LinearLayout>
    </LinearLayout>

</ScrollView>